Flag its Java 16